# ioc/handler.go
@@ -5,6 +5,8 @@ import (
 	"github.com/MuxiKeStack/bff/pkg/htmlx"
 	"github.com/MuxiKeStack/bff/web"
 	"github.com/ecodeclub/ekit/slice"
+	"github.com/qiniu/api.v7/v7/auth/qbox"
+	"github.com/qiniu/api.v7/v7/storage"
 	"github.com/spf13/viper"
 )
 
@@ -21,4 +23,8 @@ func InitStaticHandler(staticClient staticv1.StaticServiceClient) *web.StaticHan
 		slice.ToMapV(administrators, func(element string) (string, struct{}) {
 			return element, struct{}{}
 		}))
+}
+
+func InitTubeHandler(putPolicy storage.PutPolicy, mac *qbox.Mac) *web.TubeHandler {
+	return web.NewTubeHandler(putPolicy, mac, viper.GetString("oss.domainName"))
 }
